# simple-dataclass-settings

./: README.md  pyproject.toml  simple_dataclass_settings.py
