[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_dataclass_settings"
version = "0.0.1"
authors = [
  { name="Egor Stakhovsky", email="y.stakhovsky@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: DBAD Public License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/stakhovsky/simple-dataclass-settings"
"Bug Tracker" = "https://github.com/stakhovsky/simple-dataclass-settings/issues"
