[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "simple_dataclass_settings.__version__"}

[project]
name = "simple_dataclass_settings"
dynamic = ["version"]
description = "Simple library on top of dataclasses to create shiny-looking configs from environment variables."
authors = [
  { name="Egor Stakhovsky", email="y.stakhovsky@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/stakhovsky/simple-dataclass-settings"
"Bug Tracker" = "https://github.com/stakhovsky/simple-dataclass-settings/issues"
